# OctoPrint-Layercapturedatacollect

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
extras/: LayerCaptureDatacollect.md  README.txt
extras/github/: bug_report.yml  feature_request.yml
octoprint_LayerCaptureDatacollect/: LayerCaptureDatacollect.py  LayerCaptureDatacollectPlugin.py  __init__.py  camera.py  camera_fake.py  camera_picamera.py  hooks.py
octoprint_LayerCaptureDatacollect/static/js/: LayerCaptureDatacollect.js
octoprint_LayerCaptureDatacollect/templates/: LayerCaptureDatacollect_settings.jinja2
scripts/: capture_seq.gcode  free_cam.sh
translations/: README.txt
